--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Your custom variables
 $theme-colors: (
-	"primary": #2f3c7e,
-	"secondary": #4255b3,
+	"primary": #16323b,
+	"secondary": #dfdfdf,
 	"success": #198754,
 	"danger": #dc3545,
 	"warning": #ffc107,
