--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Your custom variables
 $theme-colors: (
-	"primary": #16323b,
-	"secondary": #dfdfdf,
+	"primary": #adc2a9,
+	"secondary": #1f4bdc,
 	"success": #198754,
 	"danger": #dc3545,
 	"warning": #ffc107,
