--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,15 +1,16 @@
-// Your custom variables
+// Custom variables
+$primary: #adc2a9;
+$gray: #4f4f4f;
+$light: #f8f9fa;
 $theme-colors: (
-	"primary": #adc2a9,
-	"secondary": #1f4bdc,
+	"primary": $primary,
+	"secondary": #6c757d,
 	"success": #198754,
 	"danger": #dc3545,
 	"warning": #ffc107,
 	"info": #0dcaf0,
-	"dark": #212529,
-	"light": #f8f9fa,
-	"mask": #00000041,
-	"background": #f2f2f2,
+	"dark": #343a40,
+	"light": $light,
 );
 $spacer: 1rem;
 $spacers: (
@@ -18,11 +19,12 @@ $spacers: (
 	2: $spacer * 0.5,
 	3: $spacer,
 	4: $spacer * 1.5,
-	5: $spacer * 3,
+	5: $spacer * 3.5,
 	6: $spacer * 5,
 	7: $spacer * 8,
 	8: $spacer * 11,
 	9: $spacer * 14,
 	10: $spacer * 17,
 );
+
 @import "mdb-react-ui-kit/dist/scss/mdb.free.scss";
