--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,8 @@
-@use "./styles";
 @use "./variables";
+@use "./globals";
+@use "./navbar";
+@use "./hero";
+@use "./category";
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap");
